Voltando pro back

--- a/projetoNovaJogos/projeto-nova-jogos/client/src/pages/Jogos/styles.css
+++ b/projetoNovaJogos/projeto-nova-jogos/client/src/pages/Jogos/styles.css
@@ -19,10 +19,9 @@
     margin-left: 24px; 
 }
 
-.jogos-container header span strong {
-
-    color: #b6ff00;
-}
+    .jogos-container header span strong {
+        color: #2825EA;
+    }
 
 
  .jogos-container header img {
